--- a/src/app.html
+++ b/src/app.html
@@ -3,8 +3,10 @@
 
 <head>
 	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+	<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 	<meta name="viewport" content="width=device-width" />
+	<title>Noteboard</title>
+
 	%sveltekit.head%
 </head>
 
