--- a/src/app.html
+++ b/src/app.html
@@ -3,8 +3,11 @@
 
 <head>
 	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 	<meta name="viewport" content="width=device-width" />
+	<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
+	<link rel="apple-touch-icon" href="%sveltekit.assets%/favicon.svg" />
+	<link rel="mask-icon" href="%sveltekit.assets%/favicon.svg" />
+
 	<title>Noteboard</title>
 
 	%sveltekit.head%
